// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextField component supports filled text fields 1`] = `
"<label
  class=\\"mdc-text-field mdc-text-field--no-label mdc-text-field--filled\\"
>
  <span
    class=\\"mdc-text-field__ripple\\"
  />
  <input
    class=\\"mdc-text-field__input\\"
    type=\\"text\\"
    value=\\"\\"
  />
  <span
    class=\\"mdc-line-ripple\\"
  />
</label>"
`;

exports[`TextField component supports filled text fields 2`] = `
"<label
  class=\\"mdc-text-field mdc-text-field--disabled mdc-text-field--filled\\"
>
  <span
    class=\\"mdc-text-field__ripple\\"
  />
  <input
    class=\\"mdc-text-field__input\\"
    disabled=\\"\\"
    placeholder=\\"bar\\"
    required=\\"\\"
    type=\\"text\\"
    value=\\"\\"
  />
  <span
    class=\\"mdc-floating-label mdc-floating-label--required\\"
  >
    foo
  </span>
  <span
    class=\\"mdc-line-ripple\\"
  />
</label>"
`;

exports[`TextField component supports filled text fields 3`] = `
"<label
  class=\\"mdc-text-field mdc-text-field--label-floating mdc-text-field--filled qux\\"
>
  <span
    class=\\"mdc-text-field__ripple\\"
  />
  <input
    aria-labelledby=\\"bar-label\\"
    class=\\"mdc-text-field__input\\"
    id=\\"bar\\"
    name=\\"bar\\"
    pattern=\\"[a-z]*\\"
    type=\\"text\\"
    value=\\"baz\\"
  />
  <span
    class=\\"mdc-floating-label mdc-floating-label--float-above\\"
    id=\\"bar-label\\"
  >
    foo
  </span>
  <span
    class=\\"mdc-line-ripple\\"
  />
</label>"
`;

exports[`TextField component supports filled text fields 4`] = `
"<label
  class=\\"mdc-text-field mdc-text-field--label-floating mdc-text-field--filled\\"
>
  <span
    class=\\"mdc-text-field__ripple\\"
  />
  <input
    aria-labelledby=\\"bar-label\\"
    class=\\"mdc-text-field__input\\"
    id=\\"bar\\"
    name=\\"bar\\"
    type=\\"text\\"
    value=\\"baz\\"
  />
  <span
    class=\\"mdc-floating-label mdc-floating-label--float-above\\"
    id=\\"bar-label\\"
  >
    foo
  </span>
  <span
    class=\\"mdc-line-ripple\\"
  />
</label>"
`;

exports[`TextField component supports filled text fields 5`] = `
"<label
  class=\\"mdc-text-field mdc-text-field--no-label mdc-text-field--filled\\"
>
  <span
    class=\\"mdc-text-field__ripple\\"
  />
  <input
    class=\\"mdc-text-field__input\\"
    type=\\"text\\"
    value=\\"\\"
  />
  <span
    class=\\"mdc-line-ripple\\"
  />
</label>
<div
  class=\\"mdc-text-field-helper-line\\"
>
  <div
    aria-hidden=\\"true\\"
    class=\\"mdc-text-field-helper-text\\"
  >
    qux
  </div>
</div>"
`;

exports[`TextField component supports filled text fields 6`] = `
"<label
  class=\\"mdc-text-field mdc-text-field--disabled mdc-text-field--filled\\"
>
  <span
    class=\\"mdc-text-field__ripple\\"
  />
  <input
    class=\\"mdc-text-field__input\\"
    disabled=\\"\\"
    placeholder=\\"bar\\"
    required=\\"\\"
    type=\\"text\\"
    value=\\"\\"
  />
  <span
    class=\\"mdc-floating-label mdc-floating-label--required\\"
  >
    foo
  </span>
  <span
    class=\\"mdc-line-ripple\\"
  />
</label>
<div
  class=\\"mdc-text-field-helper-line\\"
>
  <div
    aria-hidden=\\"true\\"
    class=\\"mdc-text-field-helper-text mdc-text-field-helper-text--persistent\\"
  >
    qux
  </div>
</div>"
`;

exports[`TextField component supports filled text fields 7`] = `
"<label
  class=\\"mdc-text-field mdc-text-field--label-floating mdc-text-field--filled qux\\"
>
  <span
    class=\\"mdc-text-field__ripple\\"
  />
  <input
    aria-controls=\\"bar-helper\\"
    aria-describedby=\\"bar-helper\\"
    aria-labelledby=\\"bar-label\\"
    class=\\"mdc-text-field__input\\"
    id=\\"bar\\"
    name=\\"bar\\"
    pattern=\\"[a-z]*\\"
    type=\\"text\\"
    value=\\"baz\\"
  />
  <span
    class=\\"mdc-floating-label mdc-floating-label--float-above\\"
    id=\\"bar-label\\"
  >
    foo
  </span>
  <span
    class=\\"mdc-line-ripple\\"
  />
</label>
<div
  class=\\"mdc-text-field-helper-line\\"
>
  <div
    aria-hidden=\\"true\\"
    class=\\"mdc-text-field-helper-text mdc-text-field-helper-text--validation-msg\\"
    id=\\"bar-helper\\"
  >
    qux
  </div>
</div>"
`;

exports[`TextField component supports filled textareas 1`] = `
"<label
  class=\\"mdc-text-field mdc-text-field--no-label mdc-text-field--filled mdc-text-field--textarea\\"
>
  <span
    class=\\"mdc-text-field__ripple\\"
  />
  <textarea
    class=\\"mdc-text-field__input\\"
    cols=\\"32\\"
    rows=\\"4\\"
  />
  <span
    class=\\"mdc-line-ripple\\"
  />
</label>"
`;

exports[`TextField component supports filled textareas 2`] = `
"<label
  class=\\"mdc-text-field mdc-text-field--no-label mdc-text-field--disabled mdc-text-field--filled mdc-text-field--textarea\\"
>
  <span
    class=\\"mdc-text-field__ripple\\"
  />
  <span
    class=\\"mdc-text-field__resizer\\"
  >
    <textarea
      class=\\"mdc-text-field__input\\"
      cols=\\"32\\"
      disabled=\\"\\"
      placeholder=\\"bar\\"
      required=\\"\\"
      rows=\\"4\\"
    />
  </span>
  <span
    class=\\"mdc-line-ripple\\"
  />
</label>"
`;

exports[`TextField component supports filled textareas 3`] = `
"<label
  class=\\"mdc-text-field mdc-text-field--no-label mdc-text-field--label-floating mdc-text-field--filled mdc-text-field--textarea qux\\"
>
  <span
    class=\\"mdc-text-field__ripple\\"
  />
  <textarea
    class=\\"mdc-text-field__input\\"
    cols=\\"40\\"
    id=\\"bar\\"
    name=\\"bar\\"
    pattern=\\"[a-z]*\\"
    rows=\\"6\\"
  >
    baz
  </textarea>
  <span
    class=\\"mdc-line-ripple\\"
  />
</label>"
`;

exports[`TextField component supports filled textareas 4`] = `
"<label
  class=\\"mdc-text-field mdc-text-field--no-label mdc-text-field--filled mdc-text-field--textarea\\"
>
  <span
    class=\\"mdc-text-field__ripple\\"
  />
  <span
    class=\\"mdc-text-field__resizer\\"
  >
    <textarea
      class=\\"mdc-text-field__input\\"
      cols=\\"32\\"
      rows=\\"4\\"
    />
  </span>
  <span
    class=\\"mdc-line-ripple\\"
  />
</label>
<div
  class=\\"mdc-text-field-helper-line\\"
>
  <div
    aria-hidden=\\"true\\"
    class=\\"mdc-text-field-helper-text\\"
  >
    qux
  </div>
</div>"
`;

exports[`TextField component supports filled textareas 5`] = `
"<label
  class=\\"mdc-text-field mdc-text-field--disabled mdc-text-field--filled mdc-text-field--textarea\\"
>
  <span
    class=\\"mdc-text-field__ripple\\"
  />
  <textarea
    class=\\"mdc-text-field__input\\"
    cols=\\"32\\"
    disabled=\\"\\"
    placeholder=\\"bar\\"
    required=\\"\\"
    rows=\\"4\\"
  />
  <span
    class=\\"mdc-floating-label mdc-floating-label--required\\"
  >
    foo
  </span>
  <span
    class=\\"mdc-line-ripple\\"
  />
</label>
<div
  class=\\"mdc-text-field-helper-line\\"
>
  <div
    aria-hidden=\\"true\\"
    class=\\"mdc-text-field-helper-text mdc-text-field-helper-text--persistent\\"
  >
    qux
  </div>
</div>"
`;

exports[`TextField component supports filled textareas 6`] = `
"<label
  class=\\"mdc-text-field mdc-text-field--label-floating mdc-text-field--filled mdc-text-field--textarea qux\\"
>
  <span
    class=\\"mdc-text-field__ripple\\"
  />
  <textarea
    aria-controls=\\"bar-helper\\"
    aria-describedby=\\"bar-helper\\"
    aria-labelledby=\\"bar-label\\"
    class=\\"mdc-text-field__input\\"
    cols=\\"32\\"
    id=\\"bar\\"
    name=\\"bar\\"
    pattern=\\"[a-z]*\\"
    rows=\\"4\\"
  >
    baz
  </textarea>
  <span
    class=\\"mdc-floating-label mdc-floating-label--float-above\\"
    id=\\"bar-label\\"
  >
    foo
  </span>
  <span
    class=\\"mdc-line-ripple\\"
  />
</label>
<div
  class=\\"mdc-text-field-helper-line\\"
>
  <div
    aria-hidden=\\"true\\"
    class=\\"mdc-text-field-helper-text mdc-text-field-helper-text--validation-msg\\"
    id=\\"bar-helper\\"
  >
    qux
  </div>
</div>"
`;

exports[`TextField component supports outlined text fields 1`] = `
"<label
  class=\\"mdc-text-field mdc-text-field--no-label mdc-text-field--outlined\\"
>
  <input
    class=\\"mdc-text-field__input\\"
    type=\\"text\\"
    value=\\"\\"
  />
  <span
    class=\\"mdc-notched-outline mdc-notched-outline--no-label\\"
  >
    <span
      class=\\"mdc-notched-outline__leading\\"
    />
    <span
      class=\\"mdc-notched-outline__trailing\\"
    />
  </span>
</label>"
`;

exports[`TextField component supports outlined text fields 2`] = `
"<label
  class=\\"mdc-text-field mdc-text-field--disabled mdc-text-field--outlined\\"
>
  <input
    class=\\"mdc-text-field__input\\"
    disabled=\\"\\"
    placeholder=\\"bar\\"
    required=\\"\\"
    type=\\"text\\"
    value=\\"\\"
  />
  <span
    class=\\"mdc-notched-outline mdc-notched-outline--upgraded\\"
  >
    <span
      class=\\"mdc-notched-outline__leading\\"
    />
    <span
      class=\\"mdc-notched-outline__notch\\"
    >
      <span
        class=\\"mdc-floating-label mdc-floating-label--required\\"
        style=\\"transition-duration: 0s;\\"
      >
        foo
      </span>
    </span>
    <span
      class=\\"mdc-notched-outline__trailing\\"
    />
  </span>
</label>"
`;

exports[`TextField component supports outlined text fields 3`] = `
"<label
  class=\\"mdc-text-field mdc-text-field--label-floating mdc-text-field--outlined qux\\"
>
  <input
    aria-labelledby=\\"bar-label\\"
    class=\\"mdc-text-field__input\\"
    id=\\"bar\\"
    name=\\"bar\\"
    pattern=\\"[a-z]*\\"
    type=\\"text\\"
    value=\\"baz\\"
  />
  <span
    class=\\"mdc-notched-outline mdc-notched-outline--upgraded mdc-notched-outline--notched\\"
  >
    <span
      class=\\"mdc-notched-outline__leading\\"
    />
    <span
      class=\\"mdc-notched-outline__notch\\"
      style=\\"width: 0px;\\"
    >
      <span
        class=\\"mdc-floating-label mdc-floating-label--float-above\\"
        id=\\"bar-label\\"
        style=\\"transition-duration: 0s;\\"
      >
        foo
      </span>
    </span>
    <span
      class=\\"mdc-notched-outline__trailing\\"
    />
  </span>
</label>"
`;

exports[`TextField component supports outlined text fields 4`] = `
"<label
  class=\\"mdc-text-field mdc-text-field--no-label mdc-text-field--outlined\\"
>
  <input
    class=\\"mdc-text-field__input\\"
    type=\\"text\\"
    value=\\"\\"
  />
  <span
    class=\\"mdc-notched-outline mdc-notched-outline--no-label\\"
  >
    <span
      class=\\"mdc-notched-outline__leading\\"
    />
    <span
      class=\\"mdc-notched-outline__trailing\\"
    />
  </span>
</label>
<div
  class=\\"mdc-text-field-helper-line\\"
>
  <div
    aria-hidden=\\"true\\"
    class=\\"mdc-text-field-helper-text\\"
  >
    qux
  </div>
</div>"
`;

exports[`TextField component supports outlined text fields 5`] = `
"<label
  class=\\"mdc-text-field mdc-text-field--disabled mdc-text-field--outlined\\"
>
  <input
    class=\\"mdc-text-field__input\\"
    disabled=\\"\\"
    placeholder=\\"bar\\"
    required=\\"\\"
    type=\\"text\\"
    value=\\"\\"
  />
  <span
    class=\\"mdc-notched-outline mdc-notched-outline--upgraded\\"
  >
    <span
      class=\\"mdc-notched-outline__leading\\"
    />
    <span
      class=\\"mdc-notched-outline__notch\\"
    >
      <span
        class=\\"mdc-floating-label mdc-floating-label--required\\"
        style=\\"transition-duration: 0s;\\"
      >
        foo
      </span>
    </span>
    <span
      class=\\"mdc-notched-outline__trailing\\"
    />
  </span>
</label>
<div
  class=\\"mdc-text-field-helper-line\\"
>
  <div
    aria-hidden=\\"true\\"
    class=\\"mdc-text-field-helper-text mdc-text-field-helper-text--persistent\\"
  >
    qux
  </div>
</div>"
`;

exports[`TextField component supports outlined text fields 6`] = `
"<label
  class=\\"mdc-text-field mdc-text-field--label-floating mdc-text-field--outlined qux\\"
>
  <input
    aria-controls=\\"bar-helper\\"
    aria-describedby=\\"bar-helper\\"
    aria-labelledby=\\"bar-label\\"
    class=\\"mdc-text-field__input\\"
    id=\\"bar\\"
    name=\\"bar\\"
    pattern=\\"[a-z]*\\"
    type=\\"text\\"
    value=\\"baz\\"
  />
  <span
    class=\\"mdc-notched-outline mdc-notched-outline--upgraded mdc-notched-outline--notched\\"
  >
    <span
      class=\\"mdc-notched-outline__leading\\"
    />
    <span
      class=\\"mdc-notched-outline__notch\\"
      style=\\"width: 0px;\\"
    >
      <span
        class=\\"mdc-floating-label mdc-floating-label--float-above\\"
        id=\\"bar-label\\"
        style=\\"transition-duration: 0s;\\"
      >
        foo
      </span>
    </span>
    <span
      class=\\"mdc-notched-outline__trailing\\"
    />
  </span>
</label>
<div
  class=\\"mdc-text-field-helper-line\\"
>
  <div
    aria-hidden=\\"true\\"
    class=\\"mdc-text-field-helper-text mdc-text-field-helper-text--validation-msg\\"
    id=\\"bar-helper\\"
  >
    qux
  </div>
</div>"
`;

exports[`TextField component supports outlined textareas 1`] = `
"<label
  class=\\"mdc-text-field mdc-text-field--no-label mdc-text-field--outlined mdc-text-field--textarea\\"
>
  <textarea
    class=\\"mdc-text-field__input\\"
    cols=\\"32\\"
    rows=\\"4\\"
  />
  <span
    class=\\"mdc-notched-outline mdc-notched-outline--no-label\\"
  >
    <span
      class=\\"mdc-notched-outline__leading\\"
    />
    <span
      class=\\"mdc-notched-outline__trailing\\"
    />
  </span>
</label>"
`;

exports[`TextField component supports outlined textareas 2`] = `
"<label
  class=\\"mdc-text-field mdc-text-field--no-label mdc-text-field--disabled mdc-text-field--outlined mdc-text-field--textarea\\"
>
  <span
    class=\\"mdc-text-field__resizer\\"
  >
    <textarea
      class=\\"mdc-text-field__input\\"
      cols=\\"32\\"
      disabled=\\"\\"
      placeholder=\\"bar\\"
      required=\\"\\"
      rows=\\"4\\"
    />
  </span>
  <span
    class=\\"mdc-notched-outline mdc-notched-outline--no-label\\"
  >
    <span
      class=\\"mdc-notched-outline__leading\\"
    />
    <span
      class=\\"mdc-notched-outline__trailing\\"
    />
  </span>
</label>"
`;

exports[`TextField component supports outlined textareas 3`] = `
"<label
  class=\\"mdc-text-field mdc-text-field--no-label mdc-text-field--label-floating mdc-text-field--outlined mdc-text-field--textarea qux\\"
>
  <textarea
    class=\\"mdc-text-field__input\\"
    cols=\\"40\\"
    id=\\"bar\\"
    name=\\"bar\\"
    pattern=\\"[a-z]*\\"
    rows=\\"6\\"
  >
    baz
  </textarea>
  <span
    class=\\"mdc-notched-outline mdc-notched-outline--no-label\\"
  >
    <span
      class=\\"mdc-notched-outline__leading\\"
    />
    <span
      class=\\"mdc-notched-outline__trailing\\"
    />
  </span>
</label>"
`;

exports[`TextField component supports outlined textareas 4`] = `
"<label
  class=\\"mdc-text-field mdc-text-field--no-label mdc-text-field--outlined mdc-text-field--textarea\\"
>
  <span
    class=\\"mdc-text-field__resizer\\"
  >
    <textarea
      class=\\"mdc-text-field__input\\"
      cols=\\"32\\"
      rows=\\"4\\"
    />
  </span>
  <span
    class=\\"mdc-notched-outline mdc-notched-outline--no-label\\"
  >
    <span
      class=\\"mdc-notched-outline__leading\\"
    />
    <span
      class=\\"mdc-notched-outline__trailing\\"
    />
  </span>
</label>
<div
  class=\\"mdc-text-field-helper-line\\"
>
  <div
    aria-hidden=\\"true\\"
    class=\\"mdc-text-field-helper-text\\"
  >
    qux
  </div>
</div>"
`;

exports[`TextField component supports outlined textareas 5`] = `
"<label
  class=\\"mdc-text-field mdc-text-field--disabled mdc-text-field--outlined mdc-text-field--textarea\\"
>
  <textarea
    class=\\"mdc-text-field__input\\"
    cols=\\"32\\"
    disabled=\\"\\"
    placeholder=\\"bar\\"
    required=\\"\\"
    rows=\\"4\\"
  />
  <span
    class=\\"mdc-notched-outline mdc-notched-outline--upgraded\\"
  >
    <span
      class=\\"mdc-notched-outline__leading\\"
    />
    <span
      class=\\"mdc-notched-outline__notch\\"
    >
      <span
        class=\\"mdc-floating-label mdc-floating-label--required\\"
        style=\\"transition-duration: 0s;\\"
      >
        foo
      </span>
    </span>
    <span
      class=\\"mdc-notched-outline__trailing\\"
    />
  </span>
</label>
<div
  class=\\"mdc-text-field-helper-line\\"
>
  <div
    aria-hidden=\\"true\\"
    class=\\"mdc-text-field-helper-text mdc-text-field-helper-text--persistent\\"
  >
    qux
  </div>
</div>"
`;

exports[`TextField component supports outlined textareas 6`] = `
"<label
  class=\\"mdc-text-field mdc-text-field--label-floating mdc-text-field--outlined mdc-text-field--textarea qux\\"
>
  <textarea
    aria-controls=\\"bar-helper\\"
    aria-describedby=\\"bar-helper\\"
    aria-labelledby=\\"bar-label\\"
    class=\\"mdc-text-field__input\\"
    cols=\\"32\\"
    id=\\"bar\\"
    name=\\"bar\\"
    pattern=\\"[a-z]*\\"
    rows=\\"4\\"
  >
    baz
  </textarea>
  <span
    class=\\"mdc-notched-outline mdc-notched-outline--upgraded mdc-notched-outline--notched\\"
  >
    <span
      class=\\"mdc-notched-outline__leading\\"
    />
    <span
      class=\\"mdc-notched-outline__notch\\"
      style=\\"width: 0px;\\"
    >
      <span
        class=\\"mdc-floating-label mdc-floating-label--float-above\\"
        id=\\"bar-label\\"
        style=\\"transition-duration: 0s;\\"
      >
        foo
      </span>
    </span>
    <span
      class=\\"mdc-notched-outline__trailing\\"
    />
  </span>
</label>
<div
  class=\\"mdc-text-field-helper-line\\"
>
  <div
    aria-hidden=\\"true\\"
    class=\\"mdc-text-field-helper-text mdc-text-field-helper-text--validation-msg\\"
    id=\\"bar-helper\\"
  >
    qux
  </div>
</div>"
`;
